src/components/header/header.scss
.title-styles {
  color: #ececec;
  font-size: 36px;
}

.title-name-styles {
  color: #ffc97c !important;
}

.title-name-styles-underlined {
  color: #ffc97c !important;
  font-weight: 900;
}

.subtitle {
  color: #d9d9d9;
  font-size: 24px;
}

.subtitle-format {
  padding-top: 10px;
}

.text-background {
  background-color: #313131;
  color: #ffc97c;
  border-radius: 2px;
  height: 50px;
  width: 100px;

  &:hover {
    text-decoration: underline;
  }
}

.download-cv {
  margin-top: 1em;
  background-color: #313131;
  color: #d9d9d9;
  border: none;
  &:hover {
    color: white;
    background-color: #373737;
  }
  &:active {
    color: white;
    background-color: #373737;
  }
  &:focus {
    color: white;
    background-color: #373737;
  }
}

// Responsive Queries

@media screen and (min-width: 1201px) {
  .header-break::before {
    content: "\a";
    white-space: pre;
  }
}

